--- a/swagger/activity_type.json.mustache
+++ b/swagger/activity_type.json.mustache
@@ -26,6 +26,7 @@
       "Surfing",
       "Swim",
       "VirtualRide",
+      "VirtualRun",
       "Walk",
       "WeightTraining",
       "Windsurf",
