[Needful] Clarify fields and parameters for get athlete stats endpoint
These details went missing when we moved the api doc to swagger. Adding
them back based on the old doc.

--- a/swagger/activity_total.json.mustache
+++ b/swagger/activity_total.json.mustache
@@ -1,7 +1,7 @@
 {
   "ActivityTotal": {
     "type": "object",
-    "description": "A roll-up of metrics pertaining to a set of activities.",
+    "description": "A roll-up of metrics pertaining to a set of activities. Values are in seconds and meters.",
     "properties": {
       "count": {
         "type": "integer",
