--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -58,7 +58,7 @@
           {
             "name": "id",
             "in": "path",
-            "description": "The identifier of the athlete.",
+            "description": "The identifier of the athlete. Must match the authenticated athlete.",
             "required": true,
             "type": "integer"
           },
