--- a/swagger/activity_stats.json.mustache
+++ b/swagger/activity_stats.json.mustache
@@ -13,30 +13,39 @@
         "description": "The highest climb ridden by the athlete."
       },
       "recent_ride_totals": {
+        "description": "The recent (last 4 weeks) ride stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       },
       "recent_run_totals": {
+        "description": "The recent (last 4 weeks) run stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       },
       "recent_swim_totals": {
+        "description": "The recent (last 4 weeks) swim stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       },
       "ytd_ride_totals": {
+        "description": "The year to date ride stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       },
       "ytd_run_totals": {
+        "description": "The year to date run stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       },
       "ytd_swim_totals": {
+        "description": "The year to date swim stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       },
       "all_ride_totals": {
+        "description": "The all time ride stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       },
       "all_run_totals": {
+        "description": "The all time run stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       },
       "all_swim_totals": {
+        "description": "The all time swim stats for the athlete.",
         "$ref": "{{reference_prefix}}/activity_total.json#/ActivityTotal"
       }
     }
