Added gear_id back to activity (#101)

--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -205,6 +205,10 @@
             "type": "boolean",
             "description": "Whether the logged-in athlete has kudoed this activity"
           },
+          "gear_id": {
+            "type": "string",
+            "description": "The id of the gear for the activity"
+          },
           "kilojoules": {
             "type": "number",
             "format": "float",
